--- a/package.json
+++ b/package.json
@@ -24,15 +24,18 @@
 		"format": "prettier --write \"./**/*.{js,json}\""
 	},
 	"dependencies": {
+		"axios": "^1.7.2",
 		"chalk": "^4.1.2",
 		"cli-alerts": "^1.2.2",
 		"cli-handle-error": "^4.4.0",
 		"cli-handle-unhandled": "^1.1.1",
 		"cli-meow-help": "^3.1.0",
 		"cli-welcome": "^2.2.3",
+		"fs-extra": "^11.2.0",
 		"inquirer": "^10.0.1",
 		"meow": "^9.0.0",
-		"ora": "^8.0.1"
+		"ora": "^8.0.1",
+		"unzipper": "^0.12.2"
 	},
 	"devDependencies": {
 		"prettier": "^3.3.3"
